# hs-mini-kanren

./: .gitignore  README.md  mini-kanren.cabal
app/: Main.hs
src/: MiniKanren.hs
src/MiniKanren/: Backtracking.hs  Fresh.hs  Parser.hs  Predicate.hs  Term.hs
type-inference-simpl/: README.md  type-inference-simpl.cabal
type-inference-simpl/app/: Main.hs
type-inference-simpl/src/: Example.hs  Expr.hs  Infer.hs  Lib.hs  Term.hs  Type.hs
