name:                type-inference-simpl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/type-inference-simpl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Expr
                     , Type
                     , Infer
                     , Example
  build-depends:       base >= 4.7 && < 5
                     , recursion-schemes
                     , containers
                     , mtl
                     , lens
                     , either
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor
                     , DeriveTraversable
                     , PatternSynonyms
                     , FlexibleContexts
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , OverloadedStrings
                     , LambdaCase

executable repl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , type-inference-simpl
  default-language:    Haskell2010

test-suite type-inference-simpl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , type-inference-simpl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/type-inference-simpl
